--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <div class="blockD">
                     
                     Самый проработанный сервер по теме СССП (на даннный момент)
-                <p>Наш проект про Союз Советских Социалистических Планет отличается от других серверов, тем что мы пытаемся создать станцию СССП. Другие проекты на тему СССП были обычными серверами без изменений. </p>
-
+                <p>
+                    Наш проект про Союз Советских Социалистических Планет отличается от других серверов, тем что мы пытаемся создать станцию СССП. Другие проекты на тему СССП были обычными серверами без изменений.
+                </p>
                 <p>
                     Над проектом работают 3 энтузиаста и в тоже время идейные бездельники   
                 </p>
